@startuml Cinema System Entity Class Diagram
!theme plain
skinparam roundcorner 10
skinparam shadowing false

skinparam class {
    BackgroundColor #FFF4E6
    BorderColor #D32F2F
    ArrowColor #D32F2F
    FontSize 11
}

skinparam linetype {
    linecolor #D32F2F
    lineweight 2
}

title Hệ Thống Quản Lý Rạp Chiếu Phim\nSơ Đồ Lớp Thực Thể - Pha Phân Tích

' =====================================================
' LỚP USER - Người dùng hệ thống
' =====================================================
class User {
    fullName
    username
    password
    email
    phone
    role
    note
}

' =====================================================
' LỚP CINEMA - Thông tin rạp chiếu phim
' =====================================================
class Cinema {
    name
    address
    description
}

' =====================================================
' LỚP ROOM - Phòng chiếu phim
' =====================================================
class Room {
    name
    capacity
    description
    format
}

' =====================================================
' LỚP SEAT - Ghế ngồi trong phòng chiếu
' =====================================================
class Seat {
    position
    seatType
}

' =====================================================
' LỚP GENRE - Thể loại phim
' =====================================================
class Genre {
    name
    description
}

' =====================================================
' LỚP MOVIE - Thông tin phim
' =====================================================
class Movie {
    title
    description
    duration
    rating
    releaseDate
    status
    poster
    trailer
    language
}

' =====================================================
' LỚP SHOWTIME - Lịch chiếu phim
' =====================================================
class Showtime {
    startTime
    endTime
    status
}

' =====================================================
' LỚP ORDER - Đơn đặt vé
' =====================================================
class Order {
    orderTime
    status
    totalAmount
}

' =====================================================
' LỚP TICKET - Vé xem phim
' =====================================================
class Ticket {
    price
    status
}

' =====================================================
' LỚP PAYMENT - Thanh toán
' =====================================================
class Payment {
    method
    amount
    paidAt
    status
}

' =====================================================
' LỚP MEMBERSHIPCARD - Thẻ thành viên
' =====================================================
class MembershipCard {
    cardNumber
    issueAt
    status
}

' =====================================================
' QUAN HỆ GIỮA CÁC LỚP
' =====================================================

' Cinema -> Room (1:N) - Một rạp có nhiều phòng chiếu
Cinema "1" ||--o{ "N" Room : "có nhiều"

' Room -> Seat (1:N) - Một phòng có nhiều ghế
Room "1" ||--o{ "N" Seat : "có nhiều"

' Movie -> Showtime (1:N) - Một phim có nhiều lịch chiếu
Movie "1" ||--o{ "N" Showtime : "chiếu nhiều lần"

' Room -> Showtime (1:N) - Một phòng có nhiều lịch chiếu
Room "1" ||--o{ "N" Showtime : "được chiếu tại"

' Movie <-> Genre (N:M) - Một phim có nhiều thể loại, một thể loại có nhiều phim
Movie "N" }o--o{ "M" Genre : "thuộc nhiều thể loại"

' User -> Order (1:N) - Một người dùng có nhiều đơn hàng
User "1" ||--o{ "N" Order : "đặt nhiều"

' Order -> Ticket (1:N) - Một đơn hàng có nhiều vé
Order "1" ||--o{ "N" Ticket : "bao gồm"

' Seat -> Ticket (1:N) - Một ghế có thể được đặt nhiều lần (qua các lịch chiếu khác nhau)
Seat "1" ||--o{ "N" Ticket : "được đặt"

' Showtime -> Ticket (1:N) - Một lịch chiếu có nhiều vé
Showtime "1" ||--o{ "N" Ticket : "có nhiều vé"

' Order -> Payment (1:N) - Một đơn hàng có thể có nhiều thanh toán
Order "1" ||--o{ "N" Payment : "thanh toán"

' User -> MembershipCard (1:N) - Một người dùng có thể có nhiều thẻ thành viên
User "1" ||--o{ "N" MembershipCard : "sở hữu"

' =====================================================
' GHI CHÚ VÀ MÔ TẢ
' =====================================================

note right of User
    <b>Người dùng hệ thống</b>
    Bao gồm:
    • Nhân viên quản lý
    • Nhân viên bán hàng
    • Khách hàng
end note

note right of Movie
    <b>Thông tin phim</b>
    Trạng thái có thể là:
    • Now Showing (Đang chiếu)
    • Coming Soon (Sắp chiếu)
    Một phim có thể thuộc nhiều thể loại
end note

note right of Genre
    <b>Thể loại phim</b>
    Ví dụ:
    • Tâm lý
    • Hành động
    • Hài
    • Khoa học viễn tưởng
    Một thể loại có thể có nhiều phim
end note

note right of Showtime
    <b>Lịch chiếu phim</b>
    Trạng thái có thể là:
    • Scheduled (Đã lên lịch)
    • Cancelled (Đã hủy)
    • Completed (Đã hoàn thành)
end note

note right of Order
    <b>Đơn đặt vé</b>
    Trạng thái có thể là:
    • Pending (Chờ xử lý)
    • Completed (Hoàn thành)
    • Cancelled (Đã hủy)
end note

note right of Ticket
    <b>Vé xem phim</b>
    Trạng thái có thể là:
    • Issued (Đã phát hành)
    • Used (Đã sử dụng)
    • Cancelled (Đã hủy)
end note

note right of Payment
    <b>Thanh toán</b>
    Phương thức thanh toán:
    • Cash (Tiền mặt)
    • Card (Thẻ)
    • Online (Trực tuyến)
end note

@enduml

